--- a/WalletService.Persistance/WalletService.Persistance.csproj
+++ b/WalletService.Persistance/WalletService.Persistance.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WalletService.Application\WalletService.Application.csproj" />
     <ProjectReference Include="..\WalletService.Core\WalletService.Core.csproj" />
   </ItemGroup>
 
